--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@thednp/color-picker": "^2.0.3",
         "aos": "^2.3.4"
     },
     "devDependencies": {
