--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@thednp/color-picker": "^2.0.3",
+        "@thednp/color-picker": "^2.0.4",
         "aos": "^2.3.4",
-        "photoswipe": "^5.4.4"
+        "photoswipe": "^5.4.4",
+        "sharp": "^0.34.3",
+        "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
         "@astrojs/check": "^0.9.4",
-        "@astrojs/sitemap": "^3.3.0",
-        "@tailwindcss/vite": "^4.0.14",
+        "@astrojs/sitemap": "^3.4.1",
+        "@tailwindcss/vite": "^4.1.11",
         "@types/aos": "^3.0.7",
-        "astro": "^5.7.3",
+        "astro": "^5.11.0",
         "lucide-astro": "^0.483.0",
-        "prettier": "^3.5.3",
+        "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1"
-    }
+    },
+    "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
